--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -38,6 +38,11 @@
 
     <servlet-mapping>
         <servlet-name>qoan</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/qoan/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>qoan</servlet-name>
+        <url-pattern>/VAADIN/*</url-pattern>
     </servlet-mapping>
 </web-app>
