first step in getting data onlie
wikipedia distributed search service now functions

--- a/pom.xml
+++ b/pom.xml
@@ -251,11 +251,11 @@
         </dependency>
 
         <!-- Guice-config for using external configurations -->
-        <dependency>
-            <groupId>net.jmob</groupId>
-            <artifactId>guice.conf</artifactId>
-            <version>${guice-conf.version}</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>net.jmob</groupId>-->
+        <!--<artifactId>guice.conf</artifactId>-->
+        <!--<version>${guice-conf.version}</version>-->
+        <!--</dependency>-->
 
         <!-- Tika does parsing and lucene does search and indexing -->
         <dependency>
