remote search woes corrected
now i will begin using the whole in the gui-layer as well

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,8 +12,42 @@
 #
 #
 # Root logger option
-log4j.rootLogger=INFO, stdout
+#log4j.rootLogger=INFO, stdout
 # Direct log messages to stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+status=error
+dest=err
+name=PropertiesConfig
+property.filename=/log/testlogs.log
+filter.threshold.type=ThresholdFilter
+filter.threshold.level=debug
+appender.console.type=Console
+appender.console.name=STDOUT
+appender.console.layout.type=PatternLayout
+appender.console.layout.pattern=%m%n
+appender.rolling.type=RollingFile
+appender.rolling.name=RollingFile
+appender.rolling.fileName=${filename}
+appender.rolling.filePattern=target/rolling2/test1-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.rolling.layout.type=PatternLayout
+appender.rolling.layout.pattern=%d %p %C{1.} [%t] %m%n
+appender.rolling.policies.type=Policies
+appender.rolling.policies.time.type=TimeBasedTriggeringPolicy
+appender.rolling.policies.time.interval=2
+appender.rolling.policies.time.modulate=true
+appender.rolling.policies.size.type=SizeBasedTriggeringPolicy
+appender.rolling.policies.size.size=100MB
+appender.rolling.strategy.type=DefaultRolloverStrategy
+appender.rolling.strategy.max=5
+appender.list.type=List
+appender.list.name=List
+appender.list.filter.threshold.type=ThresholdFilter
+appender.list.filter.threshold.level=error
+logger.rolling.name=com.example.my.app
+logger.rolling.level=debug
+logger.rolling.additivity=false
+logger.rolling.appenderRef.rolling.ref=RollingFile
+rootLogger.level=info
+rootLogger.appenderRef.stdout.ref=STDOUT
