--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,14 @@
             <version>1.4.01</version>
         </dependency>
 
+        <!-- Gson will be used to serialize objects in the gui-layer -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
+
         <!--  Jetty & Dependencies -->
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
