--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,8 @@
 
     <properties>
         <!--<vaadin.version>7.6.10</vaadin.version>-->
-        <vaadin.version>8.1.0.beta3</vaadin.version>
-        <!--<vaadin.version>8.0.6</vaadin.version>-->
+        <!--<vaadin.version>8.1.0.beta3</vaadin.version>-->
+        <vaadin.version>8.1.0.rc1</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
         <project.encoding>UTF-8</project.encoding>
         <jetty9.version>9.4.6.v20170531</jetty9.version>
