--- a/pom.xml
+++ b/pom.xml
@@ -174,11 +174,11 @@
         <!--</dependency>-->
 
         <!-- Vaadin plug-in to make components resizable-->
-        <!--<dependency>
+        <dependency>
             <groupId>com.vaadin.pekka</groupId>
             <artifactId>resizablecsslayout</artifactId>
             <version>1.1.0</version>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>xml-apis</groupId>
