--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,53 +1,8 @@
-#
-# Copyright 2017 Qoan Software Association. All rights reserved.
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-# http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and limitations under the License.
-#
-#
 # Root logger option
-#log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, stdout
+
 # Direct log messages to stdout
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
-status=error
-dest=err
-name=PropertiesConfig
-property.filename=/log/testlogs.log
-filter.threshold.type=ThresholdFilter
-filter.threshold.level=debug
-appender.console.type=Console
-appender.console.name=STDOUT
-appender.console.layout.type=PatternLayout
-appender.console.layout.pattern=%m%n
-appender.rolling.type=RollingFile
-appender.rolling.name=RollingFile
-appender.rolling.fileName=${filename}
-appender.rolling.filePattern=target/rolling2/test1-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
-appender.rolling.layout.type=PatternLayout
-appender.rolling.layout.pattern=%d %p %C{1.} [%t] %m%n
-appender.rolling.policies.type=Policies
-appender.rolling.policies.time.type=TimeBasedTriggeringPolicy
-appender.rolling.policies.time.interval=2
-appender.rolling.policies.time.modulate=true
-appender.rolling.policies.size.type=SizeBasedTriggeringPolicy
-appender.rolling.policies.size.size=100MB
-appender.rolling.strategy.type=DefaultRolloverStrategy
-appender.rolling.strategy.max=5
-appender.list.type=List
-appender.list.name=List
-appender.list.filter.threshold.type=ThresholdFilter
-appender.list.filter.threshold.level=error
-logger.rolling.name=com.example.my.app
-logger.rolling.level=debug
-logger.rolling.additivity=false
-logger.rolling.appenderRef.rolling.ref=RollingFile
-rootLogger.level=info
-rootLogger.appenderRef.stdout.ref=STDOUT
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
