--- a/pom.xml
+++ b/pom.xml
@@ -160,10 +160,15 @@
         </dependency>
 
         <!-- pdf-viewer add on for Vaadin -->
+        <!--<dependency>
+            <groupId>com.whitestein.vaadin.widgets</groupId>
+            <artifactId>wt-pdf-viewer</artifactId>
+            <version>1.0</version>
+        </dependency>-->
         <dependency>
-            <groupId>org.vaadin.addons</groupId>
+            <groupId>pl.pdfviewer</groupId>
             <artifactId>pdfviewer</artifactId>
-            <version>1.1.0</version>
+            <version>1.3.5</version>
         </dependency>
 
         <!-- for maths editing and rendering -->
