--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <properties>
         <!--<vaadin.version>7.6.10</vaadin.version>-->
         <!--<vaadin.version>8.1.0.beta3</vaadin.version>-->
-        <vaadin.version>8.1.0.rc2</vaadin.version>
+        <vaadin.version>8.1.2</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
         <project.encoding>UTF-8</project.encoding>
         <jetty9.version>9.4.6.v20170531</jetty9.version>
@@ -530,11 +530,11 @@
             </snapshots>
         </repository>
         <!-- in order to be able to track the beta versions -->
-        <repository>
-            <id>vaadin-prereleases</id>
-            <name>Vaadin Pre-releases</name>
-            <url>https://maven.vaadin.com/vaadin-prereleases</url>
-        </repository>
+        <!--<repository>-->
+        <!--<id>vaadin-prereleases</id>-->
+        <!--<name>Vaadin Pre-releases</name>-->
+        <!--<url>https://maven.vaadin.com/vaadin-prereleases</url>-->
+        <!--</repository>-->
         <!--<repository>-->
         <!--<id>central</id>-->
         <!--<url>http://192.168.1.4:8081/artifactory/libs-release</url>-->
