--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 
         <lucene.version>5.3.1</lucene.version>
         <tika.version>1.10</tika.version>
-        <bliki.version>3.0.19</bliki.version>
+        <bliki.version>3.1.0</bliki.version>
         <encog.version>3.4</encog.version>
         <opennlp.version>1.6.0</opennlp.version>
         <jsoup.version>1.9.2</jsoup.version>
@@ -71,10 +71,11 @@
         </dependency>
 
         <dependency>
-            <groupId>info.bliki.pdf</groupId>
+            <groupId>info.bliki.wiki</groupId>
             <artifactId>bliki-pdf</artifactId>
             <version>${bliki.version}</version>
         </dependency>
+
 
         <dependency>
             <groupId>grph</groupId>
