set of configuations added
and this one is monday-settings active of them

--- a/pom.xml
+++ b/pom.xml
@@ -561,4 +561,12 @@
         </dependencies>
     </dependencyManagement>
 
+    <distributionManagement>
+        <repository>
+            <id>artifactory.repo</id>
+            <name>Qoan Project Repository</name>
+            <url>http://192.168.1.7:8081/artifactory/libs-snapshot-local</url>
+        </repository>
+    </distributionManagement>
+
 </project>
