some more configuration changes
web-server and servlet configurations corrected.

--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -47,6 +47,11 @@
 
     <servlet-mapping>
         <servlet-name>qoan</servlet-name>
+        <url-pattern>/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>qoan</servlet-name>
         <url-pattern>/qoan/*</url-pattern>
     </servlet-mapping>
 
