--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,8 @@
         <vaadin.version>8.1.2</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
         <project.encoding>UTF-8</project.encoding>
-        <jetty9.version>9.4.6.v20170531</jetty9.version>
+        <!--<jetty9.version>9.4.6.v20170531</jetty9.version>-->
+        <jetty9.version>9.4.8.v20171121</jetty9.version>
 
         <guice.version>4.1.0</guice.version>
         <guice-conf.version>1.2.0</guice-conf.version>
@@ -236,6 +237,11 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-annotations</artifactId>
+            <version>${jetty9.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-rewrite</artifactId>
             <version>${jetty9.version}</version>
         </dependency>
         <!--<dependency>
