qoansday- new start page
improvements on components-view

--- a/src/main/resources/qube/qoan/services/shiro.ini
+++ b/src/main/resources/qube/qoan/services/shiro.ini
@@ -26,7 +26,7 @@ admin = *
 
 [main]
 # Own Realm
-jdbcRealm = qube.qai.security.QaiRealm
+jdbcRealm = qube.qai.security.QoanRealm
 
 # User Query
 #jdbcRealm.authenticationQuery = "SELECT password FROM User where username = ?"
@@ -37,12 +37,12 @@ jdbcRealm = qube.qai.security.QaiRealm
 #jdbcRealm.permissionsQuery = SELECT role FROM Role where userId = ?
 
 # Connection
-ds = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-ds.serverName = 192.168.1.7:3306
-ds.user = sa
-ds.password = sa
-ds.databaseName = users
-jdbcRealm.dataSource = $ds
+#ds = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+#ds.serverName = 192.168.1.7:3306
+#ds.user = sa
+#ds.password = sa
+#ds.databaseName = users
+#jdbcRealm.dataSource = $ds
 
 #authc.usernameParam = username
 #authc.passwordParam = password
@@ -50,8 +50,8 @@ jdbcRealm.dataSource = $ds
 
 #jdbcRealm = qube.qai.security.QaiRealm
 #jdbcRealm = org.apache.shiro.realm.jdbc.JdbcRealm
-jdbcRealmCredentialsMatcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
-jdbcRealm.credentialsMatcher = $jdbcRealmCredentialsMatcher
+#jdbcRealmCredentialsMatcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
+#jdbcRealm.credentialsMatcher = $jdbcRealmCredentialsMatcher
 
 #ps = org.apache.shiro.authc.credential.DefaultPasswordService
 #pm = org.apache.shiro.authc.credential.PasswordMatcher
