qoansday & wednesday settings

--- a/src/main/resources/qube/qoan/services/config_deploy.properties
+++ b/src/main/resources/qube/qoan/services/config_deploy.properties
@@ -11,4 +11,6 @@
 # See the License for the specific language governing permissions and limitations under the License.
 #
 #
-QAI_NODE_TO_CONNECT=192.168.1.7:5701
+NODE_NAME=QoanWebClient
+GRID_NAME=Qai-Nodes
+GRID_PASSWORD=p4ssw0rd
