qoansday & wednesday settings

--- a/src/main/resources/qube/qoan/services/config_deploy.properties
+++ b/src/main/resources/qube/qoan/services/config_deploy.properties
@@ -11,6 +11,6 @@
 # See the License for the specific language governing permissions and limitations under the License.
 #
 #
-NODE_NAME=QoanWebClient
-GRID_NAME=Qai-Nodes
+NODE_NAME=QoanWeb
+GRID_NAME=QaiGrid
 GRID_PASSWORD=p4ssw0rd
