--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
             <scope>provided</scope>
         </dependency>-->
 
+        <!-- <dependency>
+             <groupId>com.vaadin</groupId>
+             <artifactId>vaadin-push</artifactId>
+             <version>${vaadin.version}</version>
+         </dependency>-->
+
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-themes</artifactId>
