some tests corrected
but otherwise very much an in between state, nothing particular to return to

--- a/src/main/resources/qube/qoan/services/config_test.properties
+++ b/src/main/resources/qube/qoan/services/config_test.properties
@@ -11,6 +11,6 @@
 # See the License for the specific language governing permissions and limitations under the License.
 #
 #
-NODE_NAME=TestWebClient
+NODE_NAME=TestWeb
 GRID_NAME=DevGrid
 GRID_PASSWORD=p4ssw0rd
