--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.xenei</groupId>
+            <artifactId>PA4RDF</artifactId>
+            <version>1.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>qube.samsroad</groupId>
             <artifactId>samsroad</artifactId>
             <version>1.0</version>
