in between state during search-service refactorization
mainly for having a backup and not really much else

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 .git-ex/
-.idea/fileTemplates/
-.idea/workspace.xml
+.idea/
 target/
 data/
 src/main/resources/webapp/VAADIN/widgetsets/
