in between state... added new libraries and all maths parser is to follow

--- a/src/main/resources/org/qoan/services/config_dev.properties
+++ b/src/main/resources/org/qoan/services/config_dev.properties
@@ -14,3 +14,4 @@
 NODE_NAME=DevWeb
 GRID_NAME=DevGrid
 GRID_PASSWORD=p4ssw0rd
+search_services.contexts=stock_groups, procedures, wikipedia_en, wiktionary_en, wikiresources_en, pdf_files
